# lumx-ui-rs

./: .gitignore  Cargo.toml  Makefile  build.rs  readme.md  tailwind.config.js
assets/: lumx-ui.css
src/: button.rs  card.rs  dialog.rs  input_text.rs  lib.rs  type_ahead.rs
src/forms/: control.rs  mod.rs  validator.rs
src/forms/validators/: min.rs  min_length.rs  mod.rs  required.rs
src/icons/: mod.rs  spin.rs  x_mark.rs
