[package]
name = "lumx-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = [] }
leptos-use = "0.10.7"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "1.0"

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos-use/ssr"]
