[package]
name = "lumx-ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = [] }
leptos-use = "0.13.8"
serde = { version = "1.0.214", features = ["derive"] }
serde-json-wasm = "1.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }

[build-dependencies]
anyhow = { version = "1.0.93" }

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos-use/ssr"]
